--- a/tox.ini
+++ b/tox.ini
@@ -5,12 +5,14 @@ no_package = true
 
 [testenv]
 deps =
+    -r requirements.txt
     .[testing]
 commands =
     pytest {posargs}
 
 [testenv:check]
 deps =
+    -r requirements.txt
     .[testing]
     mypy
 commands =
@@ -18,6 +20,7 @@ commands =
 
 [testenv:coverage]
 deps =
+    -r requirements.txt
     .[testing]
     pytest-cov
 commands =
@@ -45,8 +48,15 @@ commands =
 [testenv:run]
 deps =
     -e .
+    -r requirements.txt
 commands =
     {envbindir}/query-exporter {posargs}
+
+[testenv:update-deps]
+deps =
+    pip-tools
+commands =
+    pip-compile --output-file requirements.txt pyproject.toml
 
 [base]
 lint_files =
