rename tox target to update-dependencies

--- a/tox.ini
+++ b/tox.ini
@@ -52,7 +52,7 @@ deps =
 commands =
     {envbindir}/query-exporter {posargs}
 
-[testenv:update-deps]
+[testenv:update-dependencies]
 deps =
     pip-tools
 commands =
