--- a/requirements.txt
+++ b/requirements.txt
@@ -12,13 +12,13 @@ aiohttp==3.11.11
     #   query-exporter (pyproject.toml)
 aiosignal==1.3.2
     # via aiohttp
-argcomplete==3.5.2
-    # via query-exporter (pyproject.toml)
 attrs==24.3.0
     # via
     #   aiohttp
     #   jsonschema
     #   referencing
+click==8.1.8
+    # via prometheus-aioexporter
 croniter==6.0.0
     # via query-exporter (pyproject.toml)
 frozenlist==1.5.0
@@ -35,6 +35,10 @@ jsonschema==4.23.0
     # via query-exporter (pyproject.toml)
 jsonschema-specifications==2024.10.1
     # via jsonschema
+markdown-it-py==3.0.0
+    # via rich
+mdurl==0.1.2
+    # via markdown-it-py
 multidict==6.1.0
     # via
     #   aiohttp
@@ -43,7 +47,7 @@ packaging==24.2
     # via pytest
 pluggy==1.5.0
     # via pytest
-prometheus-aioexporter==2.1.0
+prometheus-aioexporter==3.0.1
     # via query-exporter (pyproject.toml)
 prometheus-client==0.21.1
     # via
@@ -53,12 +57,16 @@ propcache==0.2.1
     # via
     #   aiohttp
     #   yarl
+pygments==2.18.0
+    # via rich
 pytest==8.3.4
     # via toolrack
 python-dateutil==2.9.0.post0
     # via
     #   croniter
     #   query-exporter (pyproject.toml)
+python-dotenv==1.0.1
+    # via prometheus-aioexporter
 pytz==2024.2
     # via croniter
 pyyaml==6.0.2
@@ -67,6 +75,8 @@ referencing==0.35.1
     # via
     #   jsonschema
     #   jsonschema-specifications
+rich==13.9.4
+    # via prometheus-aioexporter
 rpds-py==0.22.3
     # via
     #   jsonschema
@@ -75,10 +85,12 @@ six==1.17.0
     # via python-dateutil
 sqlalchemy==2.0.36
     # via query-exporter (pyproject.toml)
-toolrack==4.0.1
+structlog==24.4.0
     # via
     #   prometheus-aioexporter
     #   query-exporter (pyproject.toml)
+toolrack==4.0.1
+    # via query-exporter (pyproject.toml)
 typing-extensions==4.12.2
     # via sqlalchemy
 yarl==1.18.3
