chore: complete typing for tests

--- a/tox.ini
+++ b/tox.ini
@@ -16,7 +16,7 @@ deps =
     .[testing]
     mypy
 commands =
-    mypy query_exporter {posargs}
+    mypy {[base]lint_files} {posargs}
 
 [testenv:coverage]
 deps =
