--- a/pyproject.toml
+++ b/pyproject.toml
@@ -57,9 +57,12 @@ optional-dependencies.testing = [
   "pytest-mock",
   "pytest-structlog",
 ]
-urls.changelog = "https://github.com/albertodonato/query-exporter/blob/main/CHANGES.rst"
-urls.homepage = "https://github.com/albertodonato/query-exporter"
-urls.repository = "https://github.com/albertodonato/query-exporter"
+urls.Changelog = "https://github.com/albertodonato/query-exporter/blob/main/CHANGES.rst"
+urls.Documentation = "https://github.com/albertodonato/query-exporter"
+urls.Homepage = "https://github.com/albertodonato/query-exporter"
+urls."Issue Tracker" = "https://github.com/albertodonato/query-exporter/issues"
+urls."Release Notes" = "https://github.com/albertodonato/query-exporter/blob/main/CHANGES.rst"
+urls."Source Code" = "https://github.com/albertodonato/query-exporter"
 scripts.query-exporter = "query_exporter.main:script"
 
 [tool.setuptools.dynamic]
