--- a/tox.ini
+++ b/tox.ini
@@ -52,6 +52,13 @@ deps =
 commands =
     {envbindir}/query-exporter {posargs}
 
+[testenv:integration-tests]
+deps =
+    -r requirements.txt
+    .[integration-tests]
+commands =
+    pytest integration_tests {posargs}
+
 [testenv:update-dependencies]
 deps =
     pip-tools
@@ -60,5 +67,6 @@ commands =
 
 [base]
 lint_files =
+    integration_tests \
     query_exporter \
     tests
