chore: update dependencies, temporary pin click

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -41,6 +41,7 @@ dynamic = [
 ]
 dependencies = [
   "aiohttp",
+  "click<=8.1",                # XXX temporary pinning due to https://github.com/pallets/click/issues/2970
   "croniter",
   "jsonschema",
   "prometheus-aioexporter>=3",
