--- a/requirements.txt
+++ b/requirements.txt
@@ -6,7 +6,7 @@
 #
 aiohappyeyeballs==2.6.1
     # via aiohttp
-aiohttp==3.11.18
+aiohttp==3.12.10
     # via
     #   prometheus-aioexporter
     #   query-exporter (pyproject.toml)
@@ -17,21 +17,23 @@ attrs==25.3.0
     #   aiohttp
     #   jsonschema
     #   referencing
-click==8.2.1
-    # via prometheus-aioexporter
+click==8.1.0
+    # via
+    #   prometheus-aioexporter
+    #   query-exporter (pyproject.toml)
 croniter==6.0.0
     # via query-exporter (pyproject.toml)
-frozenlist==1.6.0
+frozenlist==1.6.2
     # via
     #   aiohttp
     #   aiosignal
-greenlet==3.2.2
+greenlet==3.2.3
     # via sqlalchemy
 idna==3.10
     # via yarl
 iniconfig==2.1.0
     # via pytest
-jsonschema==4.23.0
+jsonschema==4.24.0
     # via query-exporter (pyproject.toml)
 jsonschema-specifications==2025.4.1
     # via jsonschema
@@ -45,7 +47,7 @@ pluggy==1.6.0
     # via pytest
 prometheus-aioexporter==3.0.2
     # via query-exporter (pyproject.toml)
-prometheus-client==0.22.0
+prometheus-client==0.22.1
     # via
     #   prometheus-aioexporter
     #   query-exporter (pyproject.toml)
@@ -53,7 +55,9 @@ propcache==0.3.1
     # via
     #   aiohttp
     #   yarl
-pytest==8.3.5
+pygments==2.19.1
+    # via pytest
+pytest==8.4.0
     # via toolrack
 python-dateutil==2.9.0.post0
     # via
@@ -77,13 +81,13 @@ six==1.17.0
     # via python-dateutil
 sqlalchemy==2.0.41
     # via query-exporter (pyproject.toml)
-structlog==25.3.0
+structlog==25.4.0
     # via
     #   prometheus-aioexporter
     #   query-exporter (pyproject.toml)
 toolrack==4.0.1
     # via query-exporter (pyproject.toml)
-typing-extensions==4.13.2
+typing-extensions==4.14.0
     # via
     #   referencing
     #   sqlalchemy
