--- a/requirements.txt
+++ b/requirements.txt
@@ -6,7 +6,7 @@
 #
 aiohappyeyeballs==2.6.1
     # via aiohttp
-aiohttp==3.12.10
+aiohttp==3.12.11
     # via
     #   prometheus-aioexporter
     #   query-exporter (pyproject.toml)
@@ -17,10 +17,8 @@ attrs==25.3.0
     #   aiohttp
     #   jsonschema
     #   referencing
-click==8.1.0
-    # via
-    #   prometheus-aioexporter
-    #   query-exporter (pyproject.toml)
+click==8.2.1
+    # via prometheus-aioexporter
 croniter==6.0.0
     # via query-exporter (pyproject.toml)
 frozenlist==1.6.2
@@ -45,7 +43,7 @@ packaging==25.0
     # via pytest
 pluggy==1.6.0
     # via pytest
-prometheus-aioexporter==3.0.2
+prometheus-aioexporter==3.1.0
     # via query-exporter (pyproject.toml)
 prometheus-client==0.22.1
     # via
