fix: specify platform for docker base image

--- a/snap/snapcraft.yaml
+++ b/snap/snapcraft.yaml
@@ -24,8 +24,7 @@ description: |
     - MySQL (`mysql://`)
     - SQLite (`sqlite://`)
     - Microsoft SQL Server (`mssql://`)
-    - IBM DB2 (`db2://`) on supported architectures (x86_64, ppc64le and
-      s390x)
+    - IBM DB2 (`db2://`) (on x86_64 architecture)
     - ClickHouse (`clickhouse+native://`)
 icon: logo.svg
 license: GPL-3.0+
@@ -67,7 +66,6 @@ parts:
       - .
       - clickhouse-sqlalchemy
       - ibm-db-sa; platform_machine == 'x86_64'
-      - ibm-db-sa; platform_machine == 'ppc64le'
       - mysqlclient
       - psycopg2
       - pyodbc
