--- a/requirements.txt
+++ b/requirements.txt
@@ -12,11 +12,10 @@ aiohttp==3.12.13
     #   query-exporter (pyproject.toml)
 aiosignal==1.3.2
     # via aiohttp
+annotated-types==0.7.0
+    # via pydantic
 attrs==25.3.0
-    # via
-    #   aiohttp
-    #   jsonschema
-    #   referencing
+    # via aiohttp
 click==8.2.1
     # via prometheus-aioexporter
 croniter==6.0.0
@@ -31,11 +30,7 @@ idna==3.10
     # via yarl
 iniconfig==2.1.0
     # via pytest
-jsonschema==4.24.0
-    # via query-exporter (pyproject.toml)
-jsonschema-specifications==2025.4.1
-    # via jsonschema
-multidict==6.5.0
+multidict==6.6.2
     # via
     #   aiohttp
     #   yarl
@@ -53,6 +48,10 @@ propcache==0.3.2
     # via
     #   aiohttp
     #   yarl
+pydantic==2.11.7
+    # via query-exporter (pyproject.toml)
+pydantic-core==2.33.2
+    # via pydantic
 pygments==2.19.2
     # via pytest
 pytest==8.4.1
@@ -61,20 +60,12 @@ python-dateutil==2.9.0.post0
     # via
     #   croniter
     #   query-exporter (pyproject.toml)
-python-dotenv==1.1.0
+python-dotenv==1.1.1
     # via prometheus-aioexporter
 pytz==2025.2
     # via croniter
 pyyaml==6.0.2
     # via query-exporter (pyproject.toml)
-referencing==0.36.2
-    # via
-    #   jsonschema
-    #   jsonschema-specifications
-rpds-py==0.25.1
-    # via
-    #   jsonschema
-    #   referencing
 six==1.17.0
     # via python-dateutil
 sqlalchemy==2.0.41
@@ -87,7 +78,11 @@ toolrack==4.0.1
     # via query-exporter (pyproject.toml)
 typing-extensions==4.14.0
     # via
-    #   referencing
+    #   pydantic
+    #   pydantic-core
     #   sqlalchemy
+    #   typing-inspection
+typing-inspection==0.4.1
+    # via pydantic
 yarl==1.20.1
     # via aiohttp
