--- a/requirements.txt
+++ b/requirements.txt
@@ -10,7 +10,7 @@ aiohttp==3.12.13
     # via
     #   prometheus-aioexporter
     #   query-exporter (pyproject.toml)
-aiosignal==1.3.2
+aiosignal==1.4.0
     # via aiohttp
 annotated-types==0.7.0
     # via pydantic
@@ -78,6 +78,7 @@ toolrack==4.0.1
     # via query-exporter (pyproject.toml)
 typing-extensions==4.14.1
     # via
+    #   aiosignal
     #   pydantic
     #   pydantic-core
     #   sqlalchemy
