--- a/examples/oracle-stats/config.yaml
+++ b/examples/oracle-stats/config.yaml
@@ -59,38 +59,38 @@ queries:
     databases: [oracle]
     metrics:
       - oracle_sessions
-    sql: !file oracle-stats/session.sql
+    sql: !file session.sql
   resource_stats:
     databases: [oracle]
     metrics:
       - oracle_resouce_current_utilization
       - oracle_resource_limit
-    sql: !file oracle-stats/resource.sql
+    sql: !file resource.sql
   asm_diskgroup_stats:
     databases: [oracle]
     metrics:
       - oracle_asm_diskgroup_total
       - oracle_asm_diskgroup_free
-    sql: !file oracle-stats/asm-diskgroup.sql
+    sql: !file asm-diskgroup.sql
   activity_stats:
     databases: [oracle]
     metrics:
       - oracle_activity
-    sql: !file oracle-stats/activity.sql
+    sql: !file activity.sql
   process_stats:
     databases: [oracle]
     metrics:
       - oracle_process
-    sql: !file oracle-stats/process.sql
+    sql: !file process.sql
   wait_time_stats:
     databases: [oracle]
     metrics:
       - oracle_wait_time
-    sql: !file oracle-stats/wait-time.sql
+    sql: !file wait-time.sql
   tablespace_stats:
     databases: [oracle]
     metrics:
       - oracle_tablespace_bytes
       - oracle_tablespace_max_bytes
       - oracle_tablespace_free
-    sql: !file oracle-stats/tablespace.sql
+    sql: !file tablespace.sql
