chore: run image build actions only on repo owner PRs

--- a/.github/workflows/docker-image.yaml
+++ b/.github/workflows/docker-image.yaml
@@ -13,6 +13,7 @@ env:
 
 jobs:
   build:
+    if: github.actor == github.repository_owner
     runs-on: ${{ matrix.platform == 'linux/arm64' && 'ubuntu-24.04-arm' || 'ubuntu-24.04' }}
     permissions:
       contents: read
