chore: add IBM db2 to integration tests

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -52,6 +52,7 @@ dependencies = [
   "structlog",
 ]
 optional-dependencies.dbs = [
+  "ibm-db-sa",
   "mysqlclient",
   "oracledb",
   "psycopg2-binary",
