--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -83,6 +83,7 @@ jobs:
     strategy:
       matrix:
         database:
+          - ibmdb2
           - mssql
           - mysql
           - oracle
