--- a/tox.ini
+++ b/tox.ini
@@ -57,7 +57,7 @@ deps =
     -r requirements.txt
     .[integration-tests]
 commands =
-    pytest integration_tests {posargs}
+    pytest -o testpaths=integration_tests {posargs}
 
 [testenv:update-dependencies]
 deps =
