feat: use oracledb instead of cx-Oracle

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -83,7 +83,9 @@ jobs:
     strategy:
       matrix:
         database:
+          - mssql
           - mysql
+          - oracle
           - postgresql
       fail-fast: false
     steps:
