--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -9,6 +9,14 @@ on:
       - main
 
 jobs:
+  docker-build:
+    uses: ./.github/workflows/docker-image.yaml
+    permissions:
+      contents: read
+      packages: write
+      attestations: write
+      id-token: write
+
   lint:
     runs-on: ubuntu-latest
     steps:
@@ -80,6 +88,10 @@ jobs:
 
   integration-test:
     runs-on: ubuntu-latest
+    needs:
+      - docker-build
+    env:
+      QUERY_EXPORTER_TEST_IMAGE: ${{ needs.docker-build.outputs.image }}
     strategy:
       matrix:
         database:
