--- a/.github/workflows/docker-image.yaml
+++ b/.github/workflows/docker-image.yaml
@@ -3,9 +3,17 @@ name: Docker image
 on:
   push:
     branches:
-      - "**"
+      - main
     tags:
       - "[0-9]+.[0-9]+.[0-9]+"
+  pull_request:
+    branches:
+      - main
+  workflow_call:
+    outputs:
+      image:
+        description: "Docker image reference"
+        value: ${{ jobs.merge.outputs.image }}
 
 env:
   REGISTRY: ghcr.io
@@ -85,6 +93,8 @@ jobs:
     runs-on: ubuntu-latest
     needs:
       - build
+    outputs:
+      image: ${{ steps.image-ref.outputs.image }}
     steps:
       - name: Download digests
         uses: actions/download-artifact@37930b1c2abaa49bbe596cd826c3c89aef350131 # v7
@@ -121,3 +131,9 @@ jobs:
         run: |
           docker buildx imagetools create $(jq -cr '.tags | map("-t " + .) | join(" ")' <<< "$DOCKER_METADATA_OUTPUT_JSON") \
             $(printf '${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}@sha256:%s ' *)
+
+      - name: Set image output
+        id: image-ref
+        run: |
+          IMAGE=$(jq -r '.tags[0]' <<< "$DOCKER_METADATA_OUTPUT_JSON")
+          echo "image=$IMAGE" >> $GITHUB_OUTPUT
