--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -21,7 +21,8 @@ jobs:
           python-version: "3.13"
 
       - name: Build packages
-        run: python -m build
+        run: |
+          python -m build
 
       - name: Publish packges to PyPI
         uses: pypa/gh-action-pypi-publish@ed0c53931b1dc9bd32cbe73a98c7f6766f8a527e # v1.13.0
