--- a/tox.ini
+++ b/tox.ini
@@ -10,6 +10,12 @@ deps =
 commands =
     pytest {posargs}
 
+[testenv:build-packages]
+deps =
+    build
+commands =
+    {envpython} -m build
+
 [testenv:check]
 deps =
     -r requirements.txt
