--- a/.github/workflows/run-tox.yaml
+++ b/.github/workflows/run-tox.yaml
@@ -45,7 +45,7 @@ jobs:
           tox run -e ${{ inputs.tox-env }} -- ${{ inputs.env-args }}
 
       - name: Upload artifact
-        uses: actions/upload-artifact@v4
+        uses: actions/upload-artifact@b7c566a772e6b6bfb58ed0dc250532a479d7789f # v6.0.0
         if: ${{ inputs.artifact-path != '' }}
         with:
           name: ${{ inputs.artifact-name }}
