chore: release workflow fix

--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -16,6 +16,8 @@ jobs:
       artifact-path: dist/
 
   release:
+    needs:
+      - build
     environment: pypi
     permissions:
       id-token: write
