fix: cleanup-docker-images workflow fixes

--- a/.github/workflows/cleanup-docker-images.yaml
+++ b/.github/workflows/cleanup-docker-images.yaml
@@ -11,6 +11,11 @@ on:
         required: false
         type: boolean
         default: false
+      cut-off:
+        description: Cut-off value for image deletion
+        required: false
+        type: string
+        default: 2months
 
 env:
   REGISTRY: ghcr.io
@@ -26,8 +31,8 @@ jobs:
         uses: snok/container-retention-policy@3b0972b2276b171b212f8c4efbca59ebba26eceb # v3.0.1
         with:
           image-names: ${{ github.event.repository.name }}
-          cut-off: 2months
+          cut-off: ${{ inputs.cut-off }}
           account: user
           token: ${{ secrets.GITHUB_TOKEN }}
-          tag-selection: "^(pr-|sha-).*$"
+          image-tags: "^(pr-|sha-).*$"
           dry-run: ${{ inputs.dry-run }}
