chore: improve docker build image, support pushing releases to hub

--- a/.github/workflows/docker-image.yaml
+++ b/.github/workflows/docker-image.yaml
@@ -32,7 +32,8 @@ jobs:
           - full
     env:
       TAG_SUFFIX: ${{ matrix.variant != 'full' && format('-{0}', matrix.variant) || '' }}
-      MAIN_PUSH: ${{ github.event_name == 'push' && github.ref == 'refs/heads/main' }}
+      IS_MAIN_PUSH: ${{ github.event_name == 'push' && github.ref == 'refs/heads/main' }}
+      IS_TAG: ${{ startsWith(github.ref, 'refs/tags/') }}
 
     steps:
       - name: Repository checkout
@@ -51,17 +52,27 @@ jobs:
           username: ${{ github.actor }}
           password: ${{ secrets.GITHUB_TOKEN }}
 
+      - name: Log in to Docker Hub
+        if: env.IS_TAG == 'true'
+        uses: docker/login-action@5e57cd118135c172c3672efd75eb46360885c0ef # v3.6.0
+        with:
+          username: ${{ vars.DOCKERHUB_USERNAME }}
+          password: ${{ secrets.DOCKERHUB_TOKEN }}
+
       - name: Extract metadata
         id: meta
         uses: docker/metadata-action@c299e40c65443455700f0fdfc63efafe5b349051 # v5.10.0
         with:
-          images: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}
+          images: |
+            ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}
+            ${{ env.IS_TAG == 'true' && format('{0}/query-exporter', vars.DOCKERHUB_USERNAME) || '' }}
           tags: |
-            type=ref,event=branch,suffix=${{ env.TAG_SUFFIX }},enable=${{ !env.MAIN_PUSH }}
+            type=ref,event=branch,suffix=${{ env.TAG_SUFFIX }},enable=${{ env.IS_MAIN_PUSH != 'true' }}
             type=ref,event=pr,prefix=pr-,suffix=${{ env.TAG_SUFFIX }}
             type=ref,event=tag,suffix=${{ env.TAG_SUFFIX }}
+            type=semver,pattern={{major}},suffix=${{ env.TAG_SUFFIX }},enable=${{ env.IS_TAG == 'true' }}
             type=sha,prefix=sha-,suffix=${{ env.TAG_SUFFIX }}
-            type=raw,value=latest,suffix=${{ env.TAG_SUFFIX }},enable=${{ env.MAIN_PUSH }}
+            type=raw,value=latest,suffix=${{ env.TAG_SUFFIX }},enable=${{ env.IS_MAIN_PUSH == 'true' || env.IS_TAG == 'true' }}
           flavor: |
             latest=false
 
