--- a/.github/workflows/docker-image.yaml
+++ b/.github/workflows/docker-image.yaml
@@ -67,7 +67,7 @@ jobs:
             ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}
             ${{ env.IS_TAG == 'true' && format('{0}/query-exporter', vars.DOCKERHUB_USERNAME) || '' }}
           tags: |
-            type=ref,event=branch,suffix=${{ env.TAG_SUFFIX }},enable=${{ env.IS_MAIN_PUSH != 'true' }}
+            type=ref,event=branch,suffix=${{ env.TAG_SUFFIX }}
             type=ref,event=pr,prefix=pr-,suffix=${{ env.TAG_SUFFIX }}
             type=ref,event=tag,suffix=${{ env.TAG_SUFFIX }}
             type=semver,pattern={{major}},suffix=${{ env.TAG_SUFFIX }},enable=${{ env.IS_TAG == 'true' }}
